Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5830

Assertion failure mutex_get_waiters(mutex) == 0 at shutdown

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.9
    • 10.0.10
    • None
    • None

    Description

      https://bugs.launchpad.net/percona-server/+bug/1291202

      Used XtraDB version: Percona XtraDB (http://www.percona.com) 5.6.15-63.0

      Starting point is a 15-min concurrent non-deterministic test case and then at shutdown

      (gdb) thread apply all bt

      Thread 4 (Thread 0x7ff6b89a0700 (LWP 6303)):
      #0 0x00007ff6b7b6d9f7 in do_sigwait ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #1 0x00007ff6b7b6da79 in sigwait () from /lib/x86_64-linux-gnu/libpthread.so.0
      #2 0x000000000058dd56 in signal_hand (arg=0x0)
      at /home/elenst/bzr/10.0/sql/mysqld.cc:3298
      #3 0x0000000000e8ae9b in pfs_spawn_thread (arg=0x7ff6af775210)
      at /home/elenst/bzr/10.0/storage/perfschema/pfs.cc:1853
      #4 0x00007ff6b7b65e9a in start_thread ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #5 0x00007ff6b707ccbd in clone () from /lib/x86_64-linux-gnu/libc.so.6
      #6 0x0000000000000000 in ?? ()

      Thread 3 (Thread 0x7ff6b89eb780 (LWP 6265)):
      #0 0x00007ff6b7b69d84 in pthread_cond_wait@@GLIBC_2.3.2 ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #1 0x0000000000f351c5 in safe_cond_wait (cond=0x196d540 <COND_thread_count>,
      mp=0x196c480 <LOCK_thread_count>,
      file=0xff9860 "/home/elenst/bzr/10.0/include/mysql/psi/mysql_thread.h",
      line=1154) at /home/elenst/bzr/10.0/mysys/thr_mutex.c:493
      #2 0x0000000000588781 in inline_mysql_cond_wait (
      that=0x196d540 <COND_thread_count>, mutex=0x196c480 <LOCK_thread_count>,
      --Type <return> to continue, or q <return> to quit--
      src_file=0xffb3a8 "/home/elenst/bzr/10.0/sql/mysqld.cc", src_line=5519)
      at /home/elenst/bzr/10.0/include/mysql/psi/mysql_thread.h:1154
      #3 0x0000000000591977 in mysqld_main (argc=151, argv=0x7ff6b647fac0)
      at /home/elenst/bzr/10.0/sql/mysqld.cc:5519
      #4 0x0000000000588280 in main (argc=16, argv=0x7fffebcb58d8)
      at /home/elenst/bzr/10.0/sql/main.cc:25

      Thread 2 (Thread 0x7ff6b63ff700 (LWP 6274)):
      #0 0x00007ff6b7b6a0fe in pthread_cond_timedwait@@GLIBC_2.3.2 ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #1 0x0000000000f354c9 in safe_cond_timedwait (
      cond=0x2192e80 <COND_checkpoint>, mp=0x2192dc0 <LOCK_checkpoint>,
      abstime=0x7ff6b63fed60,
      file=0x11114b0 "/home/elenst/bzr/10.0/include/mysql/psi/mysql_thread.h",
      line=1191) at /home/elenst/bzr/10.0/mysys/thr_mutex.c:547
      #2 0x0000000000a60641 in inline_mysql_cond_timedwait (
      that=0x2192e80 <COND_checkpoint>, mutex=0x2192dc0 <LOCK_checkpoint>,
      abstime=0x7ff6b63fed60,
      src_file=0x11114e8 "/home/elenst/bzr/10.0/storage/maria/ma_servicethread.c", src_line=119) at /home/elenst/bzr/10.0/include/mysql/psi/mysql_thread.h:1191
      #3 0x0000000000a60b27 in my_service_thread_sleep (
      control=0x17ab0d0 <checkpoint_control>, sleep_time=30000000000)
      at /home/elenst/bzr/10.0/storage/maria/ma_servicethread.c:118
      --Type <return> to continue, or q <return> to quit--
      #4 0x0000000000a5570e in ma_checkpoint_background (arg=0x1e)
      at /home/elenst/bzr/10.0/storage/maria/ma_checkpoint.c:709
      #5 0x0000000000e8ae9b in pfs_spawn_thread (arg=0x7ff6b645a210)
      at /home/elenst/bzr/10.0/storage/perfschema/pfs.cc:1853
      #6 0x00007ff6b7b65e9a in start_thread ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #7 0x00007ff6b707ccbd in clone () from /lib/x86_64-linux-gnu/libc.so.6
      #8 0x0000000000000000 in ?? ()

      Thread 1 (Thread 0x7ff6b5bb5700 (LWP 6669)):
      #0 0x00007ff6b7b6af8c in pthread_kill ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #1 0x0000000000f2ea18 in my_write_core (sig=6)
      at /home/elenst/bzr/10.0/mysys/stacktrace.c:457
      #2 0x00000000008444cf in handle_fatal_signal (sig=6)
      at /home/elenst/bzr/10.0/sql/signal_handler.cc:262
      #3 <signal handler called>
      #4 0x00007ff6b6fbf425 in raise () from /lib/x86_64-linux-gnu/libc.so.6
      #5 0x00007ff6b6fc2b8b in abort () from /lib/x86_64-linux-gnu/libc.so.6
      #6 0x0000000000ca29e4 in mutex_free_func (mutex=0x7ff6af522988)
      at /home/elenst/bzr/10.0/storage/xtradb/sync/sync0sync.cc:371
      #7 0x0000000000ca263c in pfs_mutex_free_func (mutex=0x7ff6af522988)
      at /home/elenst/bzr/10.0/storage/xtradb/include/sync0sync.ic:585
      --Type <return> to continue, or q <return> to quit--
      #8 0x0000000000ca4cec in sync_close ()
      at /home/elenst/bzr/10.0/storage/xtradb/sync/sync0sync.cc:1642
      #9 0x0000000000c9d33d in innobase_shutdown_for_mysql ()
      at /home/elenst/bzr/10.0/storage/xtradb/srv/srv0start.cc:3081
      #10 0x0000000000b4d6d9 in innobase_end (hton=0x7ff6b645ee70,
      type=HA_PANIC_CLOSE)
      at /home/elenst/bzr/10.0/storage/xtradb/handler/ha_innodb.cc:3817
      #11 0x0000000000845dd8 in ha_finalize_handlerton (plugin=0x7ff6b1ff57f8)
      at /home/elenst/bzr/10.0/sql/handler.cc:440
      #12 0x000000000066017b in plugin_deinitialize (plugin=0x7ff6b1ff57f8,
      ref_check=true) at /home/elenst/bzr/10.0/sql/sql_plugin.cc:1169
      #13 0x0000000000660541 in reap_plugins ()
      at /home/elenst/bzr/10.0/sql/sql_plugin.cc:1242
      #14 0x0000000000662416 in plugin_shutdown ()
      at /home/elenst/bzr/10.0/sql/sql_plugin.cc:1904
      #15 0x000000000058b555 in clean_up (print_message=true)
      at /home/elenst/bzr/10.0/sql/mysqld.cc:2015
      #16 0x000000000058b304 in unireg_end ()
      at /home/elenst/bzr/10.0/sql/mysqld.cc:1922
      #17 0x000000000058b226 in kill_server (sig_ptr=0x0)
      at /home/elenst/bzr/10.0/sql/mysqld.cc:1850
      #18 0x000000000058b243 in kill_server_thread (arg=0x7ff6b899fd60)
      at /home/elenst/bzr/10.0/sql/mysqld.cc:1873
      --Type <return> to continue, or q <return> to quit--
      #19 0x0000000000e8ae9b in pfs_spawn_thread (arg=0x7ff6a342a1d0)
      at /home/elenst/bzr/10.0/storage/perfschema/pfs.cc:1853
      #20 0x00007ff6b7b65e9a in start_thread ()
      from /lib/x86_64-linux-gnu/libpthread.so.0
      #21 0x00007ff6b707ccbd in clone () from /lib/x86_64-linux-gnu/libc.so.6
      #22 0x0000000000000000 in ?? ()

      (gdb)
      #6 0x0000000000ca29e4 in mutex_free_func (mutex=0x7ff6af522988)
      at /home/elenst/bzr/10.0/storage/xtradb/sync/sync0sync.cc:371
      371 ut_a(mutex_get_waiters(mutex) == 0);
      (gdb) p *mutex
      $1 = {event = 0x7ff6b1749580, lock_word = 0 '\000', waiters = 1, list =

      { prev = 0x0, next = 0x7ff6af5228f8}

      ,
      file_name = 0x1192040 "/home/elenst/bzr/10.0/storage/xtradb/buf/buf0lru.cc",
      line = 2293, level = 145,
      cfile_name = 0x118c0f8 "/home/elenst/bzr/10.0/storage/xtradb/buf/buf0buf.cc", cline = 1288, count_os_wait = 2, thread_id = 18446744073709551615,
      magic_n = 979585, ib_mutex_type = 0,
      cmutex_name = 0x118c9d2 "&buf_pool->free_list_mutex", pfs_psi = 0x0}

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 4d
                4d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.