storage/xtradb/buf/buf0lru.cc
@@ -2290,14 +2290,11 @@ buf_LRU_block_free_non_file_page(
 		page_zip_set_size(&block->page.zip, 0);
 	}
 
-	//ut_ad(buf_pool->free_list_mutex.high_priority_waiters == 0);
 	mutex_enter_first(&buf_pool->free_list_mutex);
-	//ut_ad(buf_pool->free_list_mutex.high_priority_waiters == 0);
 	buf_block_set_state(block, BUF_BLOCK_NOT_USED);
 	UT_LIST_ADD_FIRST(list, buf_pool->free, (&block->page));
 	ut_d(block->page.in_free_list = TRUE);
 	mutex_exit(&buf_pool->free_list_mutex);
-	//ut_ad(buf_pool->free_list_mutex.high_priority_waiters == 0);
 
 	UNIV_MEM_ASSERT_AND_FREE(block->frame, UNIV_PAGE_SIZE);
 }
